@@ -1,10 +1,15 @@
-﻿using Celeste.Mod.XaphanHelper.UI_Elements;
+﻿using System.Collections;
+using Celeste.Mod.XaphanHelper.Entities;
+using Celeste.Mod.XaphanHelper.UI_Elements;
 using Microsoft.Xna.Framework;
+using Monocle;
 
 namespace Celeste.Mod.XaphanHelper.Upgrades
 {
     class PortableStation : Upgrade
     {
+        Coroutine UsePortableStationCoroutine = new();
+
         public static bool canUse = true;
 
         public override int GetDefaultValue()
@@ -25,11 +30,22 @@ namespace Celeste.Mod.XaphanHelper.Upgrades
         public override void Load()
         {
             On.Celeste.Level.Update += modLevelUpdate;
+            On.Celeste.Player.Die += onPlayerDie;
+        }
+
+        private PlayerDeadBody onPlayerDie(On.Celeste.Player.orig_Die orig, Player self, Vector2 direction, bool evenIfInvincible, bool registerDeathInStats)
+        {
+            if (UsePortableStationCoroutine.Active)
+            {
+                UsePortableStationCoroutine.Cancel();
+            }
+            return orig(self, direction, evenIfInvincible, registerDeathInStats);
         }
 
         public override void Unload()
         {
             On.Celeste.Level.Update -= modLevelUpdate;
+            On.Celeste.Player.Die -= onPlayerDie;
         }
 
         public static bool Active(Level level)
@@ -57,20 +73,48 @@ namespace Celeste.Mod.XaphanHelper.Upgrades
                     Player player = self.Tracker.GetEntity<Player>();
                     if (player != null)
                     {
-                        canUse = player.Speed == Vector2.Zero && player.OnSafeGround;
+                        canUse = player.OnSafeGround;
                     }
-                    if (self.CanPause && !XaphanModule.PlayerIsControllingRemoteDrone() && player != null && player.StateMachine.State == Player.StNormal && player.Speed == Vector2.Zero && !player.Ducking && !self.Session.GetFlag("In_bossfight") && player.OnSafeGround && XaphanModule.ModSettings.UseMiscItemSlot.Pressed && !XaphanModule.ModSettings.UseBagItemSlot.Pressed && !XaphanModule.ModSettings.OpenMap.Check && !XaphanModule.ModSettings.SelectItem.Check && !self.Session.GetFlag("Map_Opened") && player.Holding == null)
+                    if (self.CanPause && !XaphanModule.PlayerIsControllingRemoteDrone() && player != null && player.StateMachine.State == Player.StNormal && !player.Ducking && !self.Session.GetFlag("In_bossfight") && XaphanModule.ModSettings.UseMiscItemSlot.Pressed && !XaphanModule.ModSettings.UseBagItemSlot.Pressed && !XaphanModule.ModSettings.OpenMap.Check && !XaphanModule.ModSettings.SelectItem.Check && !self.Session.GetFlag("Map_Opened") && player.Holding == null)
                     {
                         BagDisplay bagDisplay = GetDisplay(self, "misc");
                         if (bagDisplay != null)
                         {
                             if (bagDisplay.currentSelection == 2)
                             {
-                                self.Add(new WarpScreen());
+                                UsePortableStationCoroutine = new Coroutine(UsePortableStation(player, self));
                             }
                         }
                     }
+                    if (UsePortableStationCoroutine != null)
+                    {
+                        UsePortableStationCoroutine.Update();
+                    }
                 }
+            }
+        }
+
+        private IEnumerator UsePortableStation(Player player, Level level)
+        {
+            bool usedStation = false;
+            float leniency = 0.5f;
+            while (XaphanModule.ModSettings.UseMiscItemSlot.Check && !usedStation)
+            {
+                while ((player.Speed.X != 0 || player.Dead || !player.OnSafeGround) && leniency > 0)
+                {
+                    leniency -= Engine.DeltaTime;
+                    yield return null;
+                }
+                if (leniency <= 0)
+                {
+                    yield break;
+                }
+                if (player.Scene != null && !player.Dead && !player.DashAttacking && player.StateMachine.State != Player.StClimb)
+                {
+                    level.Add(new WarpScreen());
+                    usedStation = true;
+                }
+                yield return null;
             }
         }
     }
