@@ -6,13 +6,15 @@ Version 1.0.71 :
 - Arrows and Climbable Vines are now working correctly with the invert grab mode
 - The Lightning Dash ability now work correctly with the invert grab mode
 - Bag and Misc abilities displays now show a red cross on top of an ability if it cannot be used
+- Pressing the Bag or Misc abbility buttons will use the corresponding ability if the player meet the required conditions during the next 0.5 seconds after the button press, even if these conditions were not meet when the button was pressed
+- Normalised the Bombs and Mega Bombs leniency to use the 0.5 seconds leniency instead of an infinite time
 - Fixed a bug preventing the player icon to be displayed on the In-Game map in interlude chapters
 - Fixed a bug allowing some icons to be displayed before their corresponding abiltiy is unlocked on the In-Game map progress display
 - Fixed a bug preventing the heat sound effect to stop if the inactive flag of the Heat Controller inside the room was true
 - Fixed a bug that caused the oxygem timer to deplete when the In-Game map, Achievements, Abilities and Lore book screens were open
 - Fixed a bug that could cause a bomb to spawn, but not being picked up when trying to jump and spawn a bomb at the same time
 - Fixed a bug that could prevent the drone to be thrown correctly when trying to jump and spawn it at the same time
-- Fixed a bug allowing to use both the Bag and Misc abilities selected at the same time, creating unintended behavior
+- Fixed a bug allowing to use both the Bag and Misc abilities selected at the same time
 - Fixed a bug allowing the player to bypass the internal delay before being able to throw a bomb or mega bomb
 - Fixed a crash when a Drone Missile or Beam got destroyed on top of a Conveyor
 - Fixed a crash when releasing the Use Bag ability button at the same frame a bomb or mega bomb hold by the player would explode
